[package]
name = "treiber_stacks"
version = "0.1.0"
authors = ["Brian L. Troutwine <brian@troutwine.us>"]

[dependencies]
num_cpus = "1.8"
conc = { git = "https://github.com/dj8yfo/hzrd_ptr_old.git"}
crossbeam = { git = "https://github.com/dj8yfo/crossbeam_cut_old.git"}
lazy_static = "1.0"
quantiles = "0.7"


[[bin]]
name = "epoch_stack"
doc = false


[[bin]]
name = "conc_stack"
doc = false
